Splitting and renaming CPU-related code
This PR proposes further separation of CPU-specific code from the rest of the framework. Specifically:
- devicedeps/ directory restructured to put device type first, OS interfaces and other code second
- some of the variables are renamed to become more generic or more device-specific, where it makes sense
- added build-time flag to indicate selected type of device (currently only CPU)

Signed-off-by: Lukasz Tuz <lukasz.tuz@intel.com>

--- a/framework/devicedeps/cpu/meson.build
+++ b/framework/devicedeps/cpu/meson.build
@@ -22,11 +22,14 @@ framework_files += [
     'devicedeps/cpu/cpu_device.cpp',
     'devicedeps/cpu/topology.cpp',
 ]
-
-default_c_flags += [
+device_flags = [
     '-DSANDSTONE_DEVICE_CPU',
 ]
 
+default_c_flags += [
+    device_flags
+]
+
 default_cpp_flags += [
-    '-DSANDSTONE_DEVICE_CPU',
+    device_flags
 ]
